# grpc-playground

./: pyproject.toml
recommendations/: .client.py.swp  recommendations.py
