[tool.poetry]
name = "grpc-playground"
version = "0.1.0"
description = ""
authors = ["Tobi-De <tobidegnon@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio-tools = "^1.41.0"
ipython = "^7.28.0"
fastapi = "^0.70.0"
Jinja2 = "^3.0.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
